tests/fails/f2.t

terra foo()
    foo()
end
foo()
